--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Second Project</h1>
         <h1>Third Project</h1>
         <header></header>
-        <main></main>
+        <main>hahahahaha my First Project</main>
         <footer></footer>
         <script src="./main.js"></script>
     </body>
