--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My First Project</title>
+        <title>pickNumberGame</title>
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <h1>First Project</h1>
-        <h1>Second Project</h1>
-        <h1>Third Project</h1>
-        <header></header>
-        <main>hahahahaha my First Project</main>
-        <footer></footer>
+        <h1>숫자 맞추기 게임!!!!</h1>
+        <div id="result_area">결과가 나온다</div>
+        <div id="chance-area">남은 찬스 : 7번</div>
+        <input type="number" id="user_input" />
+        <button id="play_button">go!!</button>
+        <button id="reset_button">리셋!!</button>
         <script src="./main.js"></script>
     </body>
 </html>
