--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="wrap">
-            <img src="./img/Updown.webp" alt="updown이미지" />
+            <img src="./img/Updown.webp" alt="updown이미지" class="img01" />
             <div id="result_area" class="result_area">숫자를 맞춰보세요.</div>
             <ul class="input">
                 <li>
@@ -25,12 +25,7 @@
             </ul>
             <div id="chance-area" class="chance_areas">남은 기회: 7</div>
             <button id="reset_button" class="reset_button">Reset</button>
-            <ul>
-                <li><img src="./img/updown.jpg" alt="" /></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <li><img src="./img/updown.jpg" alt="upDown" class="img02" /></li>
         </div>
         <script src="./main.js"></script>
     </body>
