--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
     </head>
     <body>
         <div class="wrap">
-            <img src="./img/Updown.webp" alt="updown이미지" class="img01" />
-            <div id="result_area" class="result_area">숫자를 맞춰보세요.</div>
-            <ul class="input">
-                <li>
-                    <input type="number" id="user_input" class="user_input" />
-                </li>
-                <li>
-                    <button id="play_button" class="play_button">play</button>
-                </li>
-            </ul>
-            <div id="chance-area" class="chance_areas">남은 기회: 7</div>
-            <button id="reset_button" class="reset_button">Reset</button>
-            <li><img src="./img/updown.jpg" alt="upDown" class="img02" /></li>
+            <div class="container">
+                <img src="./img/Updown.webp" alt="updown이미지" class="img01" />
+                <div id="result_area" class="result_area">숫자를 맞춰보세요.</div>
+                <ul class="input">
+                    <li>
+                        <input type="number" id="user_input" class="user_input" />
+                    </li>
+                    <li>
+                        <button id="play_button" class="play_button">play</button>
+                    </li>
+                </ul>
+                <div id="chance-area" class="chance_areas">남은 기회: 7</div>
+                <button id="reset_button" class="reset_button">Reset</button>
+                <img src="./img/updown.jpg" alt="upDown" class="img02" />
+                <img src="./img/increase.png" alt="up" class="img03" />
+                <img src="./img/decrease.png" alt="down" class="img04" />
+            </div>
         </div>
         <script src="./main.js"></script>
     </body>
